Update input placeholder from 'INIT' to 'NAME'

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="ui" class="cyber-panel">
       <div class="input-group">
-        <input id="name" placeholder="INIT" maxlength="3">
+        <input id="name" placeholder="NAME" maxlength="15">
         <button onclick="submitScore()">SAVE SCORE</button>
       </div>
       
